<resources>
    <string name="app_name" translatable="false">Movie Me</string>

    <string name="adventure">Adventure</string>
    <string name="romance">Romance</string>
    <string name="terror">Terror</string>
    <string name="suspense">Suspense</string>
    <string name="fiction">Fiction</string>
    <string name="other">Other</string>

    <string name="name_edit">Name:</string>
    <string name="director_edit">Director:</string>
    <string name="genre_edit">Genre:</string>
    <string name="age_group_edit">Age Group:</string>
    <string name="release_year_edit">Release Year:</string>

    <string name="l_age" translatable="false">L</string>
    <string name="ten_age" translatable="false">10</string>
    <string name="twelve_age" translatable="false">12</string>
    <string name="fourteen_age" translatable="false">14</string>
    <string name="sixteen_age" translatable="false">16</string>
    <string name="eighteen" translatable="false">18</string>

    <string name="release_date_undefined">Undefined</string>

    <string name="action_insert_dummy_data">Insert Dummy data</string>
    <string name="action_delete_all_entries">Delete All Movies</string>

    <string name="empty_view_title_text">There\'s no movie here!</string>
    <string name="empty_view_subtitle_text">Get started by adding a movie.</string>

    <string name="delete_swipe">DELETE</string>

    <string name="snackbar_message1">removed from your Movie list!</string>
    <string name="snackbar_message2">UNDO</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="discard">Discard</string>

    <string name="error_insert">Movie inserted unsuccessfully!</string>
    <string name="success_insert">Movie inserted successfully!</string>

    <string name="action_save">Save</string>

    <string name="label_register_activity">Add Movie</string>
    <string name="warning_dialog">Warning</string>
    <string name="responsibilities_dialog">I know</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="delete_all_movies_dialog">It\'ll delete all movies which have already registered</string>
</resources>
