<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    tools:context=".MovieActivity">

    <TableRow
        android:id="@+id/row1"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lb_nome"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_edit" />

        <TextView
            android:id="@+id/nome"
            android:layout_width="128dp"
            android:layout_height="wrap_content" />

    </TableRow>

    <!-- Segunda linha - Diretor do filme -->
    <TableRow
        android:id="@+id/row2"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lb_diretor"
            style="@style/CategoryStyle"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/director_edit" />

        <TextView
            android:id="@+id/diretor"
            android:layout_width="201dp"
            android:layout_height="wrap_content" />

    </TableRow>


    <!-- Terceira linha - Gênero do filme -->
    <TableRow
        android:id="@+id/row3"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lb_genero"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_edit" />

        <TextView
            android:id="@+id/generos"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"/>

    </TableRow>


    <!-- Quarta linha - Faixa etária -->
    <TableRow
        android:id="@+id/row4"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lb_faixa_etaria"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_group_edit" />

        <ImageView
            android:id="@+id/idades"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:padding="20dp" />

    </TableRow>

    <TableRow
        android:id="@+id/row5"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lb_lacamento"
            style="@style/CategoryStyle"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:text="@string/release_year_edit" />

        <TextView
            android:id="@+id/ano_lancamento"
            android:inputType="date" />

    </TableRow>


</TableLayout>